--- a/app/views/folders.xml
+++ b/app/views/folders.xml
@@ -4,38 +4,13 @@
 		This view wraps all of the child views/lists etc. Creates a base layout, vertically aligned.
 	-->
 	<View id="wrapper" class="deviceContainerView">
-		
-		<!-- 
-		Menu Item to open the bookmarks view
-		-->
-		<!-- <Menu id="menu" platform="android"> -->
-			
-			<!-- 
-				Adding the SearchView to the ActionBar via the Menu feature. Leveraging the standard Android Resource for the search
-				icon. Uses shared onChange function with iOS to update listView search text.
-			-->
-			<!-- <MenuItem showAsAction="Ti.Android.SHOW_AS_ACTION_IF_ROOM" title="Search" icon="Ti.Android.R.drawable.ic_menu_search">
-				<ActionView>
-                    <SearchView ns="Ti.UI.Android" id="searchBar" platform="android" onChange="onSearchChange" />
-                </ActionView>
-            </MenuItem>
-             -->
-            <!-- Android Menu item for accessing the Bookmarks view-->
-            <!-- <MenuItem id="bookmarkBtn" title="Bookmarks" icon="/images/ic_action_action_bookmark.png"showAsAction="Ti.Android.SHOW_AS_ACTION_IF_ROOM"/> -->
-        <!-- </Menu> -->
-        
-		<!--
-		If you would like the searchbar to scroll up with the listView, you can move this line before the last
-		</ListView> tag. However for our implementation, we want the searchBar to be present at all times so we have moved
-		it outside of the ListView tags.
-		-->
-		
 		<ScrollableView id="scrollableView" showPagingControl="true">
 			<ListView id="favoritesListView" class="deviceListView" defaultItemTemplate="lightTemplate">
+				<RefreshControl id="refreshControlFav" platform="ios" onRefreshstart="refresh" />
 				<Templates>
 					<ItemTemplate class="deviceItem" name="groupLblTemplate">
-                        <Label bindId="groupLbl" class="groupLbl" />
-                    </ItemTemplate>
+	                    <Label bindId="groupLbl" class="groupLbl" />
+	                </ItemTemplate>
 	            	<ItemTemplate class="deviceItem" name="sceneTemplate">
 	                    <View class="horizontal sceneContainer">
 	                        <Label bindId="sceneLbl" class="sceneLbl"/>
@@ -57,7 +32,10 @@
 				</Templates>
 			</ListView>
 			<ListView id="lightsListView" class="deviceListView" defaultItemTemplate="lightTemplate">
-				<HeaderView><TextField id="sfLights" class="searchField"></TextField></HeaderView>
+				<RefreshControl id="refreshControlLight" platform="ios" onRefreshstart="refresh" />
+				<HeaderView>
+					<TextField id="sfLights" class="searchField"></TextField>
+				</HeaderView>
 				<Templates>
 					<ItemTemplate class="deviceItem" name="groupLblTemplate">
                         <Label bindId="groupLbl" class="groupLbl" />
@@ -81,9 +59,9 @@
 	                    </View>
 					</ItemTemplate>
 				</Templates>
-                <RefreshControl id="refreshControlLights" platform="ios" />
             </ListView>
             <ListView id="scenesListView" class="deviceListView" defaultItemTemplate="lightTemplate">
+            	<RefreshControl id="refreshControlScene" platform="ios" onRefreshstart="refresh" />
             	<HeaderView><TextField id="sfScenes" class="searchField"></TextField></HeaderView>
 				<Templates>
 					<ItemTemplate class="deviceItem" name="groupLblTemplate">
@@ -110,7 +88,6 @@
 	                    </View>
 					</ItemTemplate>
 				</Templates>
-                <RefreshControl id="refreshControlScenes" platform="ios" />
             </ListView>
         </ScrollableView>
 	</View>
